# MultiQC_YC

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: linux.yaml
docs/example/: demultiplexing_report.html  sampletracking_report.html
multiqc/: multiqc_yc.py  search_patterns.yaml
multiqc/modules/: __init__.py
multiqc/modules/readsStats/: __init__.py
multiqc/templates/yc/: footer.html
multiqc_helab/: multiqc_helab.py
multiqc_helab/modules/fastq_screen_fork/: __init__.py  fastq_screen_fork.py
multiqc_helab/modules/sampletracking/: sampletracking.py
multiqc_helab/templates/helab/: __init__.py  includes.html  nav.html
multiqc_helab/templates/helab/assets/css/: helab_uchicago.css
multiqc_yc/: multiqc_yc.py
multiqc_yc/modules/readsStats/: readsStats.py
multiqc_yc/templates/yc/: footer.html  header.html
test_data/sampletracking/: NVQ_Run200-Bravo_prep194.crosscheck_metrics.txt  NVQ_Run200-Bravo_prep196.crosscheck_metrics.txt
