[project]
name = 'multiqc-readsStats'
version = "0.0.1"
description = "Multiqc test package"
authors = [{ name = "Chang Y", email = "yech1990@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
keywords = ["bioinformatics", "NGS"]


[project.entry-points."multiqc.modules.v1"]
readsStats = "multiqc.modules.readsStats:MultiqcModule"
